tests/baselines/reference/YieldExpression1_es6.errors.txt
YieldExpression1_es6.ts(1,1): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
YieldExpression1_es6.ts(1,1): error TS2304: Cannot find name 'yield'.


==== YieldExpression1_es6.ts (2 errors) ====
    yield;
    ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
    ~~~~~
!!! error TS2304: Cannot find name 'yield'.